--- a/blog.html
+++ b/blog.html
@@ -29,20 +29,20 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link " aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="/blog.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/about.html">About Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/contact.html">Contact Us</a>
-                </li>
-              </ul>
+             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/iCoderBlog/blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/iCoderBlog/about.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/iCoderBlog/contact.html">Contact Us</a>
+          </li>
+        </ul>
             >
             <form class="d-flex">
               <input
