--- a/about.html
+++ b/about.html
@@ -31,13 +31,13 @@
                 <a class="nav-link " aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/blog.html">Blog</a>
+                <a class="nav-link" href="/iCoderBlog/blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/about.html">About Us</a>
+                <a class="nav-link active" href="/iCoderBlog/about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact Us</a>
+                <a class="nav-link" href="/iCoderBlog/contact.html">Contact Us</a>
               </li>
             </ul>
             >
