--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="/">Home</a>
+                <a class="nav-link " aria-current="page" href="/iCoderBlog/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/blog.html">Blog</a>
+                <a class="nav-link" href="/iCoderBlog/blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/about.html">About Us</a>
+                <a class="nav-link " href="/iCoderBlog/about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/contact.html">Contact Us</a>
+                <a class="nav-link active" href="/iCoderBlog/contact.html">Contact Us</a>
               </li>
             </ul>
             >
