--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- NavBar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nav">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html">iCoder</a>
+      <a class="navbar-brand" href="/iCoderBlog/index.html">iCoder</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/iCoderBlog/index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/iCoderBlog/blog.html">Blog</a>
@@ -281,7 +281,7 @@
           alt="" srcset="">
         <h2>K P Balaji Reddy</h2>
         <p>A Full Stakck Developer, Bogger and founder of iCoder.</p>
-        <p><a class="btn btn-secondary" href="/about.html">View details »</a></p>
+        <p><a class="btn btn-secondary" href="/iCoderBlog/about.html">View details »</a></p>
       </div><!-- /.col-lg-4 -->
 
     </div><!-- /.row -->
