--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
     </div>
 
     <footer class="blog-footer">
-        <p style="font-size: 18px;">Template built for Blogging by <strong>kpbr</strong> </p>        <p>
+        <p style="font-size: 18px;">Template built for Blogging by <strong>kpbr</strong>  with 	❤  </p>        <p>
           <a href="#nav">Back to top</a>
         </p>
       </footer>
